experiments/docker-envoy-oidc/envoy.yaml

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 8081 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/echo-a" }
                route:
                  cluster: echo-a
                  prefix_rewrite: "/"
              - match: { prefix: "/echo-b" }
                route:
                  cluster: echo-b
                  prefix_rewrite: "/"
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: jwt_redirect_filter
                root_id: jwt_redirect
                vm_config:
                  vm_id: jwt_redirect_vm
                  runtime: "v8"
                  code:
                    local:
                      filename: "/etc/envoy/jwt_redirect_filter.wasm"
          - name: envoy.filters.http.router

  clusters:
  - name: echo-a
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: echo-a
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: echo-a, port_value: 80 }

  - name: echo-b
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: echo-b
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: echo-b, port_value: 80 }
